info/archive/2024.5.1/debian-gcc-patched-abn.md
# Configuration

>
>  R version 4.3.2 Patched (2023-12-26 r85738)
>
>  Platform: x86_64-pc-linux-gnu (64-bit)
>
>  Running under: Debian GNU/Linux trixie/sid
>
>  
>
>  Matrix products: default
>
>  BLAS:   /opt/R-patched/lib/R/lib/libRblas.so 
>
>  LAPACK: /usr/lib/x86_64-linux-gnu/lapack/liblapack.so.3.11.0
>
>  
>
>  locale:
>
>   [1] LC_CTYPE=en_US.UTF-8       LC_NUMERIC=C              
>
>   [3] LC_TIME=en_US.UTF-8        LC_COLLATE=en_US.UTF-8    
>
>   [5] LC_MONETARY=en_US.UTF-8    LC_MESSAGES=en_US.UTF-8   
>
>   [7] LC_PAPER=en_US.UTF-8       LC_NAME=C                 
>
>   [9] LC_ADDRESS=C               LC_TELEPHONE=C            
>
>  [11] LC_MEASUREMENT=en_US.UTF-8 LC_IDENTIFICATION=C       
>
>  
>
>  time zone: Etc/UTC
>
>  tzcode source: system (glibc)
>
>  
>
>  attached base packages:
>
>  [1] stats     graphics  grDevices utils     datasets  methods   base     
>
>  
>
>  loaded via a namespace (and not attached):
>
>  [1] compiler_4.3.2 tools_4.3.2    knitr_1.46     xfun_0.43      evaluate_0.23


# Installed packages



|               |Version    |
|:--------------|:----------|
|knitr          |1.46       |
|akima          |0.6-3.4    |
|ash            |1.0-15     |
|askpass        |1.2.0      |
|base64enc      |0.1-3      |
|BiocGenerics   |0.48.1     |
|BiocManager    |1.30.22    |
|BiocVersion    |3.18.1     |
|bitops         |1.0-7      |
|BMA            |3.18.17    |
|bnlearn        |4.9.3      |
|bookdown       |0.39       |
|brew           |1.0-10     |
|brglm          |0.7.2      |
|brio           |1.1.5      |
|bslib          |0.7.0      |
|cachem         |1.0.8      |
|callr          |3.7.6      |
|classInt       |0.4-10     |
|cli            |3.6.2      |
|clipr          |0.8.0      |
|coda           |0.19-4.1   |
|colorspace     |2.1-0      |
|commonmark     |1.9.1      |
|cpp11          |0.4.7      |
|crayon         |1.5.2      |
|credentials    |2.0.1      |
|curl           |5.2.1      |
|data.table     |1.15.4     |
|DBI            |1.2.2      |
|deldir         |2.0-4      |
|DEoptimR       |1.1-3      |
|Deriv          |4.1.3      |
|desc           |1.4.3      |
|deSolve        |1.40       |
|devtools       |2.4.5      |
|dfidx          |0.0-5      |
|diffobj        |0.3.5      |
|digest         |0.6.35     |
|doParallel     |1.0.17     |
|dotCall64      |1.1-1      |
|downlit        |0.4.3      |
|dplyr          |1.1.4      |
|e1071          |1.7-14     |
|Ecdat          |0.4-2      |
|Ecfun          |0.3-2      |
|ellipsis       |0.3.2      |
|entropy        |1.3.1      |
|evaluate       |0.23       |
|evd            |2.3-7      |
|fansi          |1.0.6      |
|farver         |2.1.1      |
|fastmap        |1.1.1      |
|fda            |6.1.8      |
|fds            |1.8        |
|fields         |15.2       |
|fmesher        |0.1.5      |
|FNN            |1.1.4      |
|fontawesome    |0.5.2      |
|foreach        |1.5.2      |
|Formula        |1.2-5      |
|fs             |1.6.4      |
|generics       |0.1.3      |
|gert           |2.0.1      |
|ggfun          |0.1.4      |
|ggplot2        |3.5.1      |
|ggplotify      |0.1.2      |
|gh             |1.4.1      |
|gitcreds       |0.1.2      |
|glue           |1.7.0      |
|graph          |1.80.0     |
|gridExtra      |2.3        |
|gridGraphics   |0.5-1      |
|gsl            |2.1-8      |
|gtable         |0.3.5      |
|gtools         |3.9.5      |
|hdrcde         |3.4        |
|hexbin         |1.28.3     |
|highr          |0.10       |
|HKprocess      |0.1-1      |
|htmltools      |0.5.8.1    |
|htmlwidgets    |1.6.4      |
|httpuv         |1.6.15     |
|httr           |1.4.7      |
|httr2          |1.0.1      |
|ini            |0.3.1      |
|INLA           |24.02.09   |
|INLAspacetime  |0.1.8      |
|inline         |0.3.19     |
|isoband        |0.2.7      |
|iterators      |1.0.14     |
|jpeg           |0.1-10     |
|jquerylib      |0.1.4      |
|jsonlite       |1.8.8      |
|kableExtra     |1.4.0      |
|kernlab        |0.9-32     |
|knitr.1        |1.46       |
|ks             |1.14.2     |
|labeling       |0.4.3      |
|later          |1.3.2      |
|leaps          |3.1        |
|lifecycle      |1.0.4      |
|lme4           |1.1-35.3   |
|lmtest         |0.9-40     |
|locfit         |1.5-9.9    |
|magrittr       |2.0.3      |
|maps           |3.4.2      |
|markdown       |1.12       |
|MatrixModels   |0.5-3      |
|matrixStats    |1.3.0      |
|mclogit        |0.9.6      |
|mclust         |6.1.1      |
|mcmc           |0.9-8      |
|MCMCpack       |1.7-0      |
|memisc         |0.99.31.7  |
|memoise        |2.0.1      |
|microbenchmark |1.4.10     |
|mime           |0.12       |
|miniUI         |0.1.1.1    |
|minqa          |1.2.6      |
|mlogit         |1.1-1      |
|mnormt         |2.1.1      |
|moments        |0.14.1     |
|multicool      |1.0.1      |
|munsell        |0.5.1      |
|mvtnorm        |1.2-4      |
|nloptr         |2.0.3      |
|numDeriv       |2016.8-1.1 |
|openssl        |2.1.2      |
|pcaPP          |2.0-4      |
|pillar         |1.9.0      |
|pixmap         |0.4-12     |
|pkgbuild       |1.4.4      |
|pkgconfig      |2.0.3      |
|pkgdown        |2.0.9      |
|pkgload        |1.3.4      |
|plyr           |1.8.9      |
|pracma         |2.4.4      |
|praise         |1.0.0      |
|prettyunits    |1.2.0      |
|processx       |3.8.4      |
|profileModel   |0.6.1      |
|profvis        |0.3.8      |
|promises       |1.3.0      |
|proxy          |0.4-27     |
|ps             |1.7.6      |
|purrr          |1.0.2      |
|quantreg       |5.97       |
|R.cache        |0.16.0     |
|R.methodsS3    |1.8.2      |
|R.oo           |1.26.0     |
|R.rsp          |0.46.0     |
|R.utils        |2.12.3     |
|R6             |2.5.1      |
|ragg           |1.3.0      |
|rainbow        |3.8        |
|rappdirs       |0.3.3      |
|rbibutils      |2.2.16     |
|rcmdcheck      |1.4.0      |
|RColorBrewer   |1.1-3      |
|Rcpp           |1.0.12     |
|RcppArmadillo  |0.12.8.2.1 |
|RcppEigen      |0.3.4.0.0  |
|RCurl          |1.98-1.14  |
|Rdpack         |2.6        |
|rematch2       |2.1.2      |
|remotes        |2.5.0      |
|renv           |1.0.7      |
|reshape2       |1.4.4      |
|rgl            |1.3.1      |
|Rgraphviz      |2.46.0     |
|RhpcBLASctl    |0.23-42    |
|rjags          |4-15       |
|rlang          |1.1.3      |
|rmarkdown      |2.26       |
|robustbase     |0.99-2     |
|roxygen2       |7.3.1      |
|rprojroot      |2.0.4      |
|rrcov          |1.7-5      |
|rstudioapi     |0.16.0     |
|rversions      |2.1.2      |
|rvest          |1.0.4      |
|s2             |1.1.6      |
|sass           |0.4.9      |
|scales         |1.3.0      |
|selectr        |0.4-2      |
|sessioninfo    |1.2.2      |
|sf             |1.0-16     |
|shiny          |1.8.1.1    |
|showtext       |0.9-7      |
|showtextdb     |3.0        |
|sn             |2.1.1      |
|sourcetools    |0.1.7-1    |
|sp             |2.1-4      |
|spam           |2.10-0     |
|SparseM        |1.81       |
|spData         |2.3.0      |
|spdep          |1.3-3      |
|splancs        |2.01-44    |
|statmod        |1.5.0      |
|stringi        |1.8.3      |
|stringr        |1.5.1      |
|svglite        |2.1.3      |
|sys            |3.4.2      |
|sysfonts       |0.8.9      |
|systemfonts    |1.0.6      |
|TeachingDemos  |2.13       |
|terra          |1.7-71     |
|testthat       |3.2.1.1    |
|textshaping    |0.3.7      |
|tibble         |3.2.1      |
|tidyr          |1.3.1      |
|tidyselect     |1.2.1      |
|tidyterra      |0.6.0      |
|tinytex        |0.50       |
|tis            |1.39       |
|units          |0.8-5      |
|urlchecker     |1.0.1      |
|usethis        |2.2.3      |
|utf8           |1.2.4      |
|vctrs          |0.6.5      |
|viridisLite    |0.4.2      |
|waldo          |0.5.2      |
|whisker        |0.4.1      |
|withr          |3.0.0      |
|wk             |0.9.1      |
|xfun           |0.43       |
|xml2           |1.3.6      |
|xopen          |1.0.1      |
|xtable         |1.8-4      |
|yaml           |2.3.8      |
|yulab.utils    |0.1.4      |
|zip            |2.3.1      |
|zoo            |1.8-12     |


